# 605-FInal-Image-Classification-Project

./: .gitignore  pyproject.toml  readme.md  train_ai_detection.ipynb  train_ai_detection_full_dataset.ipynb  train_ai_detection_local.ipynb
